language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_constructor_arg.snap
---
source: language-server/src/tests/action.rs
expression: "type IntWrapper { IntWrapper(innerInt: Int) }"
---
----- BEFORE ACTION
type IntWrapper { IntWrapper(innerInt: Int) }
                  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       


----- AFTER ACTION
type IntWrapper { IntWrapper(inner_int: Int) }
