language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_constructor_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub type Box { Box(Int) }\npub fn main() {\n    let Box(innerValue) = Box(203)\n}"
---
----- BEFORE ACTION
pub type Box { Box(Int) }
pub fn main() {
    let Box(innerValue) = Box(203)
            ↑                     
}


----- AFTER ACTION
pub type Box { Box(Int) }
pub fn main() {
    let Box(inner_value) = Box(203)
}
