language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_custom_type.snap
---
source: language-server/src/tests/action.rs
expression: "type Boxed_value { Box(Int) }"
---
----- BEFORE ACTION
type Boxed_value { Box(Int) }
     ▔▔▔▔▔↑                  


----- AFTER ACTION
type BoxedValue { Box(Int) }
