language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_function.snap
---
source: language-server/src/tests/action.rs
expression: "fn doStuff() {}"
---
----- BEFORE ACTION
fn doStuff() {}
▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 


----- AFTER ACTION
fn do_stuff() {}
