language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_function_type_parameter_name.snap
---
source: language-server/src/tests/action.rs
expression: "fn identity(value: someType) { value }"
---
----- BEFORE ACTION
fn identity(value: someType) { value }
                   ▔▔▔▔▔▔▔▔↑          


----- AFTER ACTION
fn identity(value: some_type) { value }
