language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_list_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert [theElement] = [9.4]\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [theElement] = [9.4]
        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub fn main() {
    let assert [the_element] = [9.4]
}
