language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_list_pattern_discard.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert [_elemOne] = [False]\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [_elemOne] = [False]
                     ↑             
}


----- AFTER ACTION
pub fn main() {
    let assert [_elem_one] = [False]
}
