language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter.snap
---
source: language-server/src/tests/action.rs
expression: "fn add(numA: Int, num_b: Int) { numA + num_b }"
---
----- BEFORE ACTION
fn add(numA: Int, num_b: Int) { numA + num_b }
       ↑                                      


----- AFTER ACTION
fn add(num_a: Int, num_b: Int) { numA + num_b }
