language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_discard_name2.snap
---
source: language-server/src/tests/action.rs
expression: "fn ignore(labelled_discard _ignoreMe: Bool) { 98 }"
---
----- BEFORE ACTION
fn ignore(labelled_discard _ignoreMe: Bool) { 98 }
   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION
fn ignore(labelled_discard _ignore_me: Bool) { 98 }
