language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_parameter_discard_name3.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let ignore = fn(_ignoreMe: Bool) { 98 }\n}"
---
----- BEFORE ACTION
pub fn main() {
    let ignore = fn(_ignoreMe: Bool) { 98 }
        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub fn main() {
    let ignore = fn(_ignore_me: Bool) { 98 }
}
